tempfile/derive_more/tests/compile_fail/from/struct_tuple_no_parens.rs
#[derive(derive_more::From)]
#[from(i16, i16)]
struct Point {
    x: i32,
    y: i32,
}

fn main() {}
